--- a/app/src/main/res/layout/shoutout_item.xml
+++ b/app/src/main/res/layout/shoutout_item.xml
@@ -63,7 +63,7 @@
             android:layout_marginStart="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/rounded_corner"
+            android:background="@drawable/rounded_bg"
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
             android:paddingTop="3dp"
