--- a/app/src/main/res/layout/fragment_event_tab.xml
+++ b/app/src/main/res/layout/fragment_event_tab.xml
@@ -21,5 +21,255 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/filterLayout"
+            android:visibility="gone"
+            android:background="@color/white">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <HorizontalScrollView
+                    android:id="@+id/filterButtons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fillViewport="true"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+                    <LinearLayout
+                        android:id="@+id/filterButtonsLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/foodTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/food"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/alcoholTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/alcohol"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/foodTag"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/healthTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/health"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/alcoholTag"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/artTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/arts"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/healthTag"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/discussionTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/discussion"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/artTag"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/forumTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/forums"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/discussionTag"
+                            android:onClick="handleTag"/>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/competitionTag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/competition"
+                            android:textColor="@color/greyText"
+                            app:backgroundTint="@android:color/white"
+                            app:cornerRadius="20dp"
+                            android:layout_marginHorizontal="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/discussionTag"
+                            android:onClick="handleTag"/>
+                    </LinearLayout>
+                </HorizontalScrollView>
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/filterButtons"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="@string/date"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="20dp"/>
+
+
+                <Button
+                    android:id="@+id/startDateButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/date"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16sp"
+                    android:text="@string/start_date"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
+
+                <TextView
+                    android:id="@+id/dash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dash"
+                    app:layout_constraintStart_toEndOf="@id/startDateButton"
+                    app:layout_constraintTop_toTopOf="@id/startDateButton"
+                    app:layout_constraintBottom_toBottomOf="@id/startDateButton" />
+                <Button
+                    android:id="@+id/endDateButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@+id/dash"
+                    app:layout_constraintTop_toBottomOf="@+id/date"
+                    android:textSize="16sp"
+                    android:text="@string/end_date"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
+
+                <TextView
+                    android:id="@+id/format"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/startDateButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="@string/format"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="20dp"/>
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/remoteBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/format"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/remote"/>
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/inPersonBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@+id/remoteBox"
+                    app:layout_constraintTop_toBottomOf="@+id/format"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/in_person"/>
+                <TextView
+                    android:id="@+id/audience"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/remoteBox"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="@string/audience"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="20dp"/>
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/campusWideBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/audience"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/Campus_wide"/>
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/duncaroosBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@+id/campusWideBox"
+                    app:layout_constraintTop_toBottomOf="@+id/audience"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/Duncaroos_only"/>
+                <Button
+                    android:id="@+id/applyButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/apply_filter"
+                    android:background="@color/goldenrod"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/duncaroosBox"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+                <DatePicker
+                    android:id="@+id/startDatePicker"
+                    android:layout_width="220dp"
+                    android:layout_height="130dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:background="@color/white"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
+                <DatePicker
+                    android:id="@+id/endDatePicker"
+                    android:layout_width="220dp"
+                    android:layout_height="130dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:background="@color/white"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/endDateButton"
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
