--- a/app/src/main/res/layout/shoutout_item.xml
+++ b/app/src/main/res/layout/shoutout_item.xml
@@ -80,7 +80,7 @@
             app:layout_constraintTop_toBottomOf="@+id/msg">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/likesImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -92,10 +92,10 @@
                 app:srcCompat="@drawable/km1" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/likesCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10"
+                app:likes="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
@@ -104,7 +104,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/lovesImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -112,10 +112,10 @@
                 android:background="@drawable/iconfinder_love_1325176" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/lovesCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="486"
+                app:loves="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
@@ -124,7 +124,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/hahasImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -132,10 +132,10 @@
                 android:background="@drawable/iconfinder_happy_1325173" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/hahasCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                app:hahas="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
@@ -144,7 +144,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/imageButton4"
+                android:id="@+id/surprisedImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -152,10 +152,10 @@
                 android:background="@drawable/iconfinder_surprise_1325174" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/surprisesCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5"
+                app:surprises="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
@@ -164,7 +164,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/imageButton5"
+                android:id="@+id/sadsImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -172,10 +172,10 @@
                 android:background="@drawable/iconfinder_sad_1325172" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/sadsCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                app:sads="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
@@ -184,7 +184,7 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/imageButton6"
+                android:id="@+id/angryImg"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
@@ -192,10 +192,10 @@
                 android:background="@drawable/iconfinder_angry_1325170" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/angryCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="99"
+                app:angrys="@{shoutout}"
                 android:textSize="19sp" />
 
             <Space
